[tool.poetry]
name = "droplettest"
version = "0.1.0"
description = ""
authors = ["George Pamfilis <gpamfilis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
